# rust-lab

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
reference/: ANTIPATTERNS.md  COMPARISON.md  OWNERSHIP_RULES.md  PATTERNS.md  STDLIB_MAP.md
